--- a/catalog.html
+++ b/catalog.html
@@ -2,60 +2,98 @@
 <html>
     <head>
         <meta charset="utf-8">
+        <link href="css/main.css" rel="stylesheet">
         <title>Каталог</title>
     </head>
-<body>
-    <div class="header"> <!-- header-->
-        <div class="logo-header">
-            <a href="#"><img src="#" alt="Логотип"></a>
-        </div>
-        <ul>
-            <li><a href="#">Информация</a></li>
-            <li><a href="#">Новости</a></li>
-            <li><a href="#">Прайс-лист</a></li>
-            <li><a href="#">Магазин</a></li>
-            <li><a href="#">Контакты</a></li>
-        </ul>
-        <div class="btn"><a href="#">Вход</a></div>
-    </div>
-    <div class="breadcrumbs"> 
-        <h1>Средства для ухода</h1>
-        <ul>
-            <li><a href="#">Главная</a></li>
-            <li><a href="#">Магазин</a></li>
-            <li><a href="#">Средство для ухода</a></li>
-        </ul>
-    </div>
-    <div class="column">
-        <form class="filter">
-            <h2>Производители:</h2>
-            
-            <input type="checkbox" name="baxter" id="baxter" checked>
-            <label for="baxter">Baxter of california</label><br>
-            <input type="checkbox" name="natty" id="natty">
-            <label for="natty">Mr Natty</label><br>
-            <input type="checkbox" name="suavecito" id="suavecito" checked>
-            <label for="suavecito">Suavecito</label><br>
-            <input type="checkbox" name="mg" id="mg">
-            <label for="mg">Malin+Goetz</label><br>
-            <input type="checkbox" name="Murray" id="Murray">
-            <label for="Murray">Murray's</label><br>
-            <input type="checkbox" name="american" id="american" checked>
-            <label for="american">American crew</label><br>
-
-            <h2>Группы товаров:</h2>
-            
-            <input type="radio" name="britva" id="britva">  
-            <label for="britva">Бритвенные принадлежности</label><br>
-            <input type="radio" name="healthcare" id="healthcare">
-            <label for="healthcare">Средства для ухода</label><br>
-            <input type="radio" name="accessories" id="accessories">
-            <label for="accessories">Аксессуары</label><br>
-            <input type="button" value="Показать">
-        </form>
-    </div>
-    <div class="catalog"></div>
-    <div class="buttons"></div>
-    <div class="footer"></div>
-</body>
+    <body>
+        <header class="main-header"> <!-- header-->
+            <div class="container">
+                <div class="logo-header">
+                <a href="#"><img src="#" alt="Логотип"></a>
+                </div>
+                <nav class="main-navigation">
+                    <ul>
+                        <li><a href="#">Информация</a></li>
+                        <li><a href="#">Новости</a></li>
+                        <li><a href="#">Прайс-лист</a></li>
+                        <li><a href="#">Магазин</a></li>
+                        <li><a href="#">Контакты</a></li>
+                    </ul>
+                </nav>
+                <div class="user-block">
+                    <a class="user-login" href="#">Вход</a>
+                </div>
+            </div>
+        </header>
+        <main class="conteiner">
+            <div class="breadcrumbs">
+                <h1>Средства для ухода</h1>
+                <ul>
+                    <li><a href="#">Главная</a></li>
+                    <li><a href="#">Магазин</a></li>
+                    <li><a href="#">Средство для ухода</a></li>
+                </ul>
+            </div>
+            <div class="catalog-content">
+                <div class="left-column">
+                    <form class="filter">
+                        <h2>Производители:</h2>
+                        <input type="checkbox" name="baxter" id="baxter" checked>
+                        <label for="baxter">Baxter of california</label><br>
+                        <input type="checkbox" name="natty" id="natty">
+                        <label for="natty">Mr Natty</label><br>
+                        <input type="checkbox" name="suavecito" id="suavecito" checked>
+                        <label for="suavecito">Suavecito</label><br>
+                        <input type="checkbox" name="mg" id="mg">
+                        <label for="mg">Malin+Goetz</label><br>
+                        <input type="checkbox" name="Murray" id="Murray">
+                        <label for="Murray">Murray's</label><br>
+                        <input type="checkbox" name="american" id="american" checked>
+                        <label for="american">American crew</label><br>
+                        <h2>Группы товаров:</h2>
+                        <input type="radio" name="britva" id="britva">  
+                        <label for="britva">Бритвенные принадлежности</label><br>
+                        <input type="radio" name="healthcare" id="healthcare">
+                        <label for="healthcare">Средства для ухода</label><br>
+                        <input type="radio" name="accessories" id="accessories">
+                        <label for="accessories">Аксессуары</label><br>
+                        <input type="button" value="Показать">
+                    </form>
+                </div>
+                <div class="right-column">
+                    <section class="catalog-items">
+                        <article class="catalog-item">
+                            <img src="img/#" alt="Baxter of California">
+                            <p>Набор для путешественника «Baxter of California»</p>
+                            <table class="item-price">
+                                <tr>
+                                    <td>2 900 руб.</td>
+                                    <td>
+                                        <button class="item-btn" type="button">Купить</button>
+                                    </td>
+                                </tr>
+                            </table>                            
+                        </article>                        
+                        <article>
+                        </article>
+                        <article>
+                        </article>
+                        <article>
+                        </article>
+                        <article>
+                        </article>
+                        <article>
+                        </article>
+                    </section>
+                    <div class="catalog-buttons">
+                        <a class="btn" href="#">1</a>
+                        <a class="btn" href="#">2</a>
+                        <a class="btn" href="#">3</a>
+                        <a class="btn" href="#">4</a>
+                    </div>
+                </div>
+            </div>
+        </main>
+        <div class="footer"></div>
+    </body>
 </html>
