--- a/catalog.html
+++ b/catalog.html
@@ -9,7 +9,7 @@
         <header class="main-header"> <!-- header-->
             <div class="container">
                 <div class="logo-header">
-                <a href="#"><img src="#" alt="Логотип"></a>
+                <a href="#"><img src="#" alt="Логотип" width="111px" height="24px"></a>
                 </div>
                 <nav class="main-navigation">
                     <ul>
@@ -25,9 +25,9 @@
                 </div>
             </div>
         </header>
-        <main class="conteiner">
+        <main class="container">
             <div class="breadcrumbs">
-                <h1>Средства для ухода</h1>
+                <h2>Средства для ухода</h2>
                 <ul>
                     <li><a href="#">Главная</a></li>
                     <li><a href="#">Магазин</a></li>
@@ -37,63 +37,150 @@
             <div class="catalog-content">
                 <div class="left-column">
                     <form class="filter">
-                        <h2>Производители:</h2>
+                        <h3>Производители:</h3>
                         <input type="checkbox" name="baxter" id="baxter" checked>
-                        <label for="baxter">Baxter of california</label><br>
+                        <label for="baxter">Baxter of california</label>
                         <input type="checkbox" name="natty" id="natty">
-                        <label for="natty">Mr Natty</label><br>
+                        <label for="natty">Mr Natty</label>
                         <input type="checkbox" name="suavecito" id="suavecito" checked>
-                        <label for="suavecito">Suavecito</label><br>
+                        <label for="suavecito">Suavecito</label>
                         <input type="checkbox" name="mg" id="mg">
-                        <label for="mg">Malin+Goetz</label><br>
-                        <input type="checkbox" name="Murray" id="Murray">
-                        <label for="Murray">Murray's</label><br>
+                        <label for="mg">Malin+Goetz</label>
+                        <input type="checkbox" name="murray" id="murray">
+                        <label for="murray">Murray's</label>
                         <input type="checkbox" name="american" id="american" checked>
-                        <label for="american">American crew</label><br>
-                        <h2>Группы товаров:</h2>
+                        <label for="american">American crew</label>
+                        <h3>Группы товаров:</h3>
                         <input type="radio" name="britva" id="britva">  
-                        <label for="britva">Бритвенные принадлежности</label><br>
+                        <label for="britva">Бритвенные принадлежности</label>
                         <input type="radio" name="healthcare" id="healthcare">
-                        <label for="healthcare">Средства для ухода</label><br>
+                        <label for="healthcare">Средства для ухода</label>
                         <input type="radio" name="accessories" id="accessories">
-                        <label for="accessories">Аксессуары</label><br>
+                        <label for="accessories">Аксессуары</label>
                         <input type="button" value="Показать">
                     </form>
                 </div>
                 <div class="right-column">
                     <section class="catalog-items">
-                        <article class="catalog-item">
-                            <img src="img/#" alt="Baxter of California">
-                            <p>Набор для путешественника «Baxter of California»</p>
-                            <table class="item-price">
-                                <tr>
-                                    <td>2 900 руб.</td>
-                                    <td>
-                                        <button class="item-btn" type="button">Купить</button>
-                                    </td>
-                                </tr>
-                            </table>                            
-                        </article>                        
-                        <article>
-                        </article>
-                        <article>
-                        </article>
-                        <article>
-                        </article>
-                        <article>
-                        </article>
-                        <article>
-                        </article>
+                        <table class="catalog-table">
+                            <tr>
+                                <td>
+                                    <article class="catalog-item">
+                                        <img src="img/#" alt="Набор для путешественника «Baxter of California»" width="220px" height="165px">
+                                        <p>Набор для путешественника «Baxter of California»</p>
+                                        <table class="item-price">
+                                            <tr>
+                                                <td>2 900 руб.</td>
+                                                <td>
+                                                    <button class="buy-btn" type="button">Купить</button>
+                                                </td>
+                                            </tr>
+                                        </table>
+                                    </article>
+                                </td>
+                                <td>
+                                    <article class="catalog-item">
+                                        <img src="img/#" alt="Увлажняющий кондиционер of California»" width="220px" height="165px">
+                                        <p>Увлажняющий кондиционер of California»</p>
+                                        <table class="item-price">
+                                            <tr>
+                                                <td>750 руб.</td>
+                                                <td>
+                                                    <button class="buy-btn" type="button">Купить</button>
+                                                </td>
+                                            </tr>
+                                        </table>
+                                    </article>
+                                </td>
+                                <td>
+                                    <article class="catalog-item">
+                                        <img src="img/#" alt="Гель для волос «Suavecito»" width="220px" height="165px">
+                                        <p>Гель для волос «Suavecito»</p>
+                                        <table class="item-price">
+                                            <tr>
+                                                <td>290 руб.</td>
+                                                <td>
+                                                    <button class="buy-btn" type="button">Купить</button>
+                                                </td>
+                                            </tr>
+                                        </table>
+                                    </article>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>
+                                    <article class="catalog-item">
+                                        <img src="img/#" alt="Глина для укладки волос «American Crew»" width="220px" height="165px">
+                                        <p>Глина для укладки волос «American Crew»</p>
+                                        <table class="item-price">
+                                            <tr>
+                                                <td>500 руб.</td>
+                                                <td>
+                                                    <button class="buy-btn" type="button">Купить</button>
+                                                </td>
+                                            </tr>
+                                        </table>
+                                    </article>
+                                </td>
+                                <td>
+                                    <article class="catalog-item">
+                                        <img src="img/#" alt="Гель для волос «American Crew»" width="220px" height="165px">
+                                        <p>Гель для волос «American Crew»</p>
+                                        <table class="item-price">
+                                            <tr>
+                                                <td>300 руб.</td>
+                                                <td>
+                                                    <button class="buy-btn" type="button">Купить</button>
+                                                </td>
+                                            </tr>
+                                        </table>
+                                    </article>
+                                </td>
+                                <td>
+                                    <article class="catalog-item">
+                                        <img src="img/#" alt="Набор для бритья «Baxter of California»" width="220px" height="165px">
+                                        <p>Набор для бритья «Baxter of California»</p>
+                                        <table class="item-price">
+                                            <tr>
+                                                <td>3 900 руб.</td>
+                                                <td>
+                                                    <button class="buy-btn" type="button">Купить</button>
+                                                </td>
+                                            </tr>
+                                        </table>
+                                    </article>
+                                </td>
+                            </tr>
+                        </table>
                     </section>
                     <div class="catalog-buttons">
-                        <a class="btn" href="#">1</a>
-                        <a class="btn" href="#">2</a>
-                        <a class="btn" href="#">3</a>
-                        <a class="btn" href="#">4</a>
+                        <a class="catalog-btn" href="#">1</a>
+                        <a class="catalog-btn" href="#">2</a>
+                        <a class="catalog-btn" href="#">3</a>
+                        <a class="catalog-btn" href="#">4</a>
                     </div>
                 </div>
             </div>
         </main>
-        <div class="footer"></div>
+        <footer class="main-footer">
+            <div class="container">
+                <section class="footer-contact">
+                    <p>Барбершоп «Бородинский»<br> Адрес: г. Санкт Петербург, ул. Б. Конюшенная, д. 19/8
+                    </p>
+                    <a href="#">Как нас найти?</a>
+                    <p>Телефон: +7 (495) 666-02-66</p>
+                </section>
+                <section class="footer-social">
+                    <p>Давайте дружить!</p>
+                    <a class="btn-social-vk" href="#">Vk</a>
+                    <a class="btn-social-fb" href="#">Fb</a>
+                    <a class="btn-social-ins" href="#">Inst</a>
+                </section>
+                <section class="footer-copyright">
+                    <p>Разработано:</p>
+                    <a class= "btn" href="#">Htmlacademy.ru</a>
+                </section>
+            </div>
+        </footer>
     </body>
 </html>
