--- a/catalog.html
+++ b/catalog.html
@@ -36,7 +36,7 @@
             </div>
             <div class="catalog-content">
                 <div class="left-column">
-                    <form class="filter">
+                    <form class="filter" method="post" action="#" >
                         <h3>Производители:</h3>
                         <input type="checkbox" name="baxter" id="baxter" checked>
                         <label for="baxter">Baxter of california</label>
