--- a/price.html
+++ b/price.html
@@ -61,13 +61,13 @@
                         </tr>
                     </table>
                 </div>
-                <div class="price-content-bottom">
-                    <h3>Несколько слов о нас:</h3>
-                    <ul>
-                        <li>Наша парикмахерская занимается исключительно мужскими стрижками. Стрижка каждого клиента для нас - это уникальная и продуманная до мелочей работа. Мы не работаем на количество, мы делаем качество</li>
-                        <li>Наша мастерская расположена в центре города, поэтому сделать стрильную стрижку можно в люьое время, даже в обеденный перерыв. Здесь вы можете погрузиться в удобную для вас атмосферу, чувствовать себя комфортно и свободно!</li>
-                    </ul>
-                </div>
+            </div>
+            <div class="price-about-us">
+                <h3>Несколько слов о нас:</h3>
+                <ul>
+                    <li>Наша парикмахерская занимается исключительно мужскими стрижками. Стрижка каждого клиента для нас - это уникальная и продуманная до мелочей работа. Мы не работаем на количество, мы делаем качество</li>
+                    <li>Наша мастерская расположена в центре города, поэтому сделать стрильную стрижку можно в люьое время, даже в обеденный перерыв. Здесь вы можете погрузиться в удобную для вас атмосферу, чувствовать себя комфортно и свободно!</li>
+                </ul>
             </div>
         </main>
         <footer class="main-footer">
