--- a/catalog-item.html
+++ b/catalog-item.html
@@ -9,7 +9,7 @@
         <header class="main-header"> <!-- header-->
             <div class="container">
                 <div class="logo-header">
-                <a href="#"><img src="#" alt="Логотип" width="111px" height="24px"></a>
+                <a href="#"><img src="/img/logo-header.png" alt="Логотип" width="111px" height="24px"></a>
                 </div>
                 <nav class="main-navigation">
                     <ul>
@@ -21,6 +21,7 @@
                     </ul>
                 </nav>
                 <div class="user-block">
+                    <img src="img/icon-login.png" alt="Enter">
                     <a class="user-login" href="#">Вход</a>
                 </div>
             </div>
@@ -38,10 +39,10 @@
             <div class="item-content">
                 <div class="item-content-left">
                     <section class="item-content-gallery">
-                        <img scr="#" alt="Travel kit" width="460px" height="498px">
-                        <img scr="#" alt="Travel kit" width="140px" height="149px">
-                        <img scr="#" alt="Travel kit" width="140px" height="149px">
-                        <img scr="#" alt="Travel kit" width="140px" height="149px">
+                        <img src="/img/goods-04-big.jpg" alt="Travel kit" width="460px" height="498px">
+                        <img src="/img/goods-04-02.jpg" alt="Travel kit" width="140px" height="149px">
+                        <img src="/img/goods-04-01.jpg" alt="Travel kit" width="140px" height="149px">
+                        <img src="/img/goods-04-big.jpg" alt="Travel kit" width="140px" height="149px">
                     </section>
                 </div>
                 <div class="item-content-right">
