--- a/catalog.html
+++ b/catalog.html
@@ -9,7 +9,7 @@
         <header class="main-header"> <!-- header-->
             <div class="container">
                 <div class="logo-header">
-                <a href="#"><img src="#" alt="Логотип" width="111px" height="24px"></a>
+                <a href="#"><img src="/img/logo-header.png" alt="Логотип" width="111px" height="24px"></a>
                 </div>
                 <nav class="main-navigation">
                     <ul>
@@ -21,6 +21,7 @@
                     </ul>
                 </nav>
                 <div class="user-block">
+                    <img src="img/icon-login.png" alt="Enter">
                     <a class="user-login" href="#">Вход</a>
                 </div>
             </div>
@@ -66,7 +67,7 @@
                             <tr>
                                 <td>
                                     <article class="catalog-item">
-                                        <img src="img/#" alt="Набор для путешественника «Baxter of California»" width="220px" height="165px">
+                                        <img src="/img/goods-04.jpg" alt="Набор для путешественника «Baxter of California»" width="220px" height="165px">
                                         <p>Набор для путешественника «Baxter of California»</p>
                                         <table class="item-price">
                                             <tr>
@@ -80,7 +81,7 @@
                                 </td>
                                 <td>
                                     <article class="catalog-item">
-                                        <img src="img/#" alt="Увлажняющий кондиционер of California»" width="220px" height="165px">
+                                        <img src="/img/goods-01.jpg" alt="Увлажняющий кондиционер of California»" width="220px" height="165px">
                                         <p>Увлажняющий кондиционер of California»</p>
                                         <table class="item-price">
                                             <tr>
@@ -94,7 +95,7 @@
                                 </td>
                                 <td>
                                     <article class="catalog-item">
-                                        <img src="img/#" alt="Гель для волос «Suavecito»" width="220px" height="165px">
+                                        <img src="/img/goods-05.jpg" alt="Гель для волос «Suavecito»" width="220px" height="165px">
                                         <p>Гель для волос «Suavecito»</p>
                                         <table class="item-price">
                                             <tr>
@@ -110,7 +111,7 @@
                             <tr>
                                 <td>
                                     <article class="catalog-item">
-                                        <img src="img/#" alt="Глина для укладки волос «American Crew»" width="220px" height="165px">
+                                        <img src="/img/goods-02.jpg" alt="Глина для укладки волос «American Crew»" width="220px" height="165px">
                                         <p>Глина для укладки волос «American Crew»</p>
                                         <table class="item-price">
                                             <tr>
@@ -124,7 +125,7 @@
                                 </td>
                                 <td>
                                     <article class="catalog-item">
-                                        <img src="img/#" alt="Гель для волос «American Crew»" width="220px" height="165px">
+                                        <img src="/img/goods-03.jpg" alt="Гель для волос «American Crew»" width="220px" height="165px">
                                         <p>Гель для волос «American Crew»</p>
                                         <table class="item-price">
                                             <tr>
@@ -138,7 +139,7 @@
                                 </td>
                                 <td>
                                     <article class="catalog-item">
-                                        <img src="img/#" alt="Набор для бритья «Baxter of California»" width="220px" height="165px">
+                                        <img src="/img/goods-06.jpg" alt="Набор для бритья «Baxter of California»" width="220px" height="165px">
                                         <p>Набор для бритья «Baxter of California»</p>
                                         <table class="item-price">
                                             <tr>
