--- a/index.html
+++ b/index.html
@@ -28,25 +28,29 @@
                     </ul>
                 </nav>
                 <div class="user-block">
+                    <img src="img/icon-login.png" alt="Enter">
                     <a class="login" href="#">Вход</a>                    
                 </div>
             </div>
         </header>
         <main class="conteiner"><!--тег main общепризнанный. класс добавили для центровки, в целом можно не добавлять, но так удобнее-->
             <div class="index-logo">
-                <img src="#" alt="Барбершоп"><!-- то что является картинкой содержательной. когда мы его убираем - теряется смысл (убрать лого это косяк). фото товара важны. ФОНЫ. фоны это изображения не содержательны, ессли их убрать, то информация не потеряется, поэтому. КОСЯК если для фона использовать тег IMG-->
+                <img src="/img/logo-big.png" alt="Барбершоп" width="368" height="204"><!-- то что является картинкой содержательной. когда мы его убираем - теряется смысл (убрать лого это косяк). фото товара важны. ФОНЫ. фоны это изображения не содержательны, ессли их убрать, то информация не потеряется, поэтому. КОСЯК если для фона использовать тег IMG-->
             </div>
             <section class="features"> <!--вырвать нельзя, поэтому сектион, для выделение смыслового раздела, можно и див использовать-->
                 <div class="features-item"><!--можно сделать и списком, без разницы-->
                     <b class="features-name">Быстро</b><!--можно заголовком, но b выделяет для слепых интонацией b. изменение интонации не будет. Еще можно span использовать-->
+                    <img src="img/rhombus.png" alt="rhombus">
                     <p>Мы делаем свою работу быстро! Два часа пролетят незаметно и вы - счастливый обладатель стильной стрижки-минутки!</p>
                 </div>
                 <div class="features-item">
                     <b class="features-name">Круто</b>
+                    <img src="img/rhombus.png" alt="rhombus">
                     <p>Забудьте, как вы стриглись раньше. Мы сделаем из вас звезду футбола или кино! Во всяком случае внешне.</p>
                 </div>
                 <div class="features-item">
                     <b class="features-name">Дорого</b>
+                    <img src="img/rhombus.png" alt="rhombus">
                     <p>Наши мастера - профессионалы своего дела и не могут стоить дешево. К тому же, разве цена не дает определенный статус?</p>
                 </div>                
             </section>
@@ -69,7 +73,7 @@
                     <h2 class="index-content-title">Фотогалерея</h2>
                     <div class="gallery">
                         <figure class="gallery-content"><!--картинка содержтельная-->
-                            <img src="#" alt="" width="286" height="164">
+                            <img src="/img/gallery-01.jpg" alt="Фото салона" width="328" height="164">
                         </figure>
                         <button class="btn-gallery-prev" type="button">Назад</button>
                         <button class="btn-gallery-prev" type="button">Вперед</button>
