--- a/price.html
+++ b/price.html
@@ -9,7 +9,7 @@
         <header class="main-header"> <!-- header-->
             <div class="container">
                 <div class="logo-header">
-                <a href="#"><img src="#" alt="Логотип" width="111px" height="24px"></a>
+                <a href="#"><img src="/img/logo-header.png" alt="Логотип" width="111px" height="24px"></a>
                 </div>
                 <nav class="main-navigation">
                     <ul>
@@ -21,6 +21,7 @@
                     </ul>
                 </nav>
                 <div class="user-block">
+                    <img src="img/icon-login.png" alt="Enter">
                     <a class="user-login" href="#">Вход</a>
                 </div>
             </div>
